# HW_29_DRF

./: README.md  pyproject.toml
ads/: models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad_urls.py  cat_urls.py
avito/: settings.py  urls.py
data/: ad.csv  ads.json  convert_to_json.py  location.csv  user.csv  user.json
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_location_user_location.py
